# reference-counted-singleton

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  tests.rs
